--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,7 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
+          <a class="navbar-brand" href="index.html"
             <span>
               🫧Nadira Anisa Fitri🫧
             </span>
