--- a/contact.html
+++ b/contact.html
@@ -168,6 +168,9 @@
   </footer>
   <!-- footer section -->
 
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+
 </body>
 
 </html>
