--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     </footer>
     <!-- footer section -->
   
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+  
   </body>
   
   </html>
