--- a/experience.html
+++ b/experience.html
@@ -228,6 +228,10 @@
   </footer>
   <!-- End Footer Section -->
   
-  </body>
-  </html>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+
+</body>
+
+</html>
   
