--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,36 @@
     </div>
       </a>
     </div>
+        <div class="heading_container">
+        <h2>
+          Contact Us
+        </h2>
+        <img src="images/plug.png" alt="">
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <form action="">
+            <div>
+              <input type="text" placeholder="Name" />
+            </div>
+            <div>
+              <input type="email" placeholder="Email" />
+            </div>
+            <div>
+              <input type="text" placeholder="Phone Number" />
+            </div>
+            <div>
+              <input type="text" class="message-box" placeholder="Message" />
+            </div>
+            <div class="d-flex ">
+              <button>
+                SEND
+              </button>
+            </div>
+          </form>
+        </div>
   </div>
 </section>
 <!-- end service section -->
