--- a/contact.html
+++ b/contact.html
@@ -2,54 +2,102 @@
 <html>
 
 <head>
+  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keywords" content="portfolio, Nadira Anisa Fitri, contact" />
-  <meta name="description" content="Portfolio and contact page of Nadira Anisa Fitri." />
-  <meta name="author" content="Nadira Anisa Fitri" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
   <title>🫧Nadira Anisa Fitri🫧</title>
 
+  <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+
+  <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+  <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
+  <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
+
   <div class="hero_area">
+    <!-- header section strats -->
     <header class="header_section">
       <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>🫧Nadira Anisa Fitri🫧</span>
+            <span>
+              🫧Nadira Anisa Fitri🫧
+            </span>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="s-1"></span>
-            <span class="s-2"></span>
-            <span class="s-3"></span>
-          </button>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="s-1"> </span>
+            <span class="s-2"> </span>
+            <span class="s-3"> </span>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
-              <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
-              <li class="nav-item"><a class="nav-link" href="experience.html">Experience</a></li>
-            </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="education.html">Education</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+        </li>
+    </ul>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+              <ul class="navbar-nav  ">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="contact.html"> Contact </a>
+                </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="education.html"> Education</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="experience.html"> Experience </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
       </div>
     </header>
+    <!-- end header section -->
   </div>
 
-  <section class="service_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>Contact Us</h2>
-      </div>
-      <div class="row">
+<!-- contact us section -->
+<section class="service_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+      <h2>
+        Contact Us
+    </div>
+    <div class="service_container">
+      <div class="box">
+        <div class="img-box">
+          <img src="Coba/1-2.png" class="img1" alt="">
+        </div>
+        <div class="row">
         <div class="col-md-6">
           <form action="#" method="post">
             <div><input type="text" name="name" placeholder="Name" required /></div>
@@ -63,40 +111,100 @@
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="service_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>Address</h2>
-      </div>
-      <div class="service_container">
-        <div class="box">
-          <div class="detail-box">
-            <p><strong>Alamat:</strong> Murangan VII, Triharjo, Sleman, Yogyakarta</p>
-            <p><strong>Email:</strong> <a href="mailto:nadiraanisafitri@mail.ugm.ac.id">nadiraanisafitri@mail.ugm.ac.id</a></p>
-          </div>
+  </div>
+</section>
+        
+<section class="service_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+        <div class="detail-box">
+          <a href="https://www.linkedin.com/in/nadiraanisafitri" target="_blank">
+          <h5>
+            Linked In
+          </h5>
+          <p>
+            Hubungi saya melalui LinkedIn untuk informasi lebih lanjut!
+          </p>
         </div>
       </div>
-      <div class="map_container">
-        <div class="map-responsive">
-          <iframe src="https://www.google.com/maps/embed?..." width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="box">
+        <div class="img-box">
+          <a href="mailto:nadiraanisafitri@mail.ugm.ac.id">
+          <img src="Coba/Gmail_icon_(2020).svg.png" class="img1" alt="">
+        </div>
+        <div class="detail-box">
+          <h5>
+            Email
+          </h5>
+          <p>
+            Hubungi saya melalui Gmail untuk informasi lebih lanjut!
+          </p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="img-box">
+          <a href="https://www.instagram.com/nadiranisaa_" target="_blank">
+          <img src="Coba/Instagram_logo_2022.svg.png" class="img1" alt="">
+        </div>
+        <div class="detail-box">
+          <h5>
+            Instagram
+          </h5>
+          <p>
+            Hubungi saya melalui Instagram untuk informasi lebih lanjut!
+          </p>
         </div>
       </div>
     </div>
-  </section>
+      </a>
+    </div>
+  </div>
+</section>
+<!-- end service section -->
 
+<!-- Contact Us Section -->
+<section class="service_section layout_padding">
+  <div class="container">
+      <div class="heading_container">
+          <h2>Address</h2>
+      </div>
+      <div class="service_container">
+          <div class="box">
+              <div class="detail-box">
+                  <p><strong>Alamat:</strong> Murangan VII, Triharjo, Sleman, Yogyakarta</p>
+                  <p><strong>Email:</strong> nadiraanisafitri@mail.ugm.ac.id</p>
+              </div>
+          </div>
+      </div>
+      <div class="map_container">
+          <div class="map-responsive">
+              <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7907.86183591126!2d110.34746625000001!3d-7.6905633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5f696b83b9a3%3A0xd115042ba5736ad0!2sPanggeran%207%2C%20Triharjo%2C%20Kec.%20Sleman%2C%20Kabupaten%20Sleman%2C%20Daerah%20Istimewa%20Yogyakarta!5e0!3m2!1sid!2sid!4v1739751523104!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+          </div>
+      </div>
+  </div>
+</section>
+
+  <!-- end contact section -->
+
+  <!-- footer section -->
   <footer class="container-fluid footer_section">
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
-          <p>&copy; Pemrograman Web 2025</p>
+          <p>
+            &copy; Pemrograman Web 2025
+          </p>
         </div>
       </div>
     </div>
   </footer>
+  <!-- footer section -->
 
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
+
 </body>
+
 </html>
