--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,9 @@
     </div>
   </div>
 </section>
-        
+<!-- end service section -->
+  
+<!-- contact us section -->
 <section class="service_section layout_padding">
   <div class="container">
     <div class="heading_container">
