--- a/contact.html
+++ b/contact.html
@@ -114,14 +114,16 @@
   </div>
 </section>
 
-<section class="service_section layout_padding">
-  <div class="container">
-    <div class="heading_container">
-        <div class="detail-box">
-          <a href="https://www.linkedin.com/in/nadiraanisafitri" target="_blank">
-          <h5>
-            Linked In
-          </h5>
+<div class="service_container">
+  <div class="box">
+    <div class="img-box">
+      <img src="Coba/1-2.png" class="img1" alt="">
+    </div>
+    <div class="detail-box">
+      <a href="https://www.linkedin.com/in/nadiraanisafitri" target="_blank">
+        <h5>
+          Linked In
+        </h5>
           <p>
             Hubungi saya melalui LinkedIn untuk informasi lebih lanjut!
           </p>
