--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,27 @@
 </section>
 <!-- end service section -->
 
+<section class="service_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+      <h2>Contact Us</h2>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <form action="#" method="post">
+          <div><input type="text" name="name" placeholder="Name" required /></div>
+          <div><input type="email" name="email" placeholder="Email" required /></div>
+          <div><input type="text" name="phone" placeholder="Phone Number" required /></div>
+          <div><textarea name="message" class="message-box" placeholder="Message" required></textarea></div>
+          <div class="d-flex">
+            <button type="submit">SEND</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+  
 <!-- Contact Us Section -->
 <section class="service_section layout_padding">
   <div class="container">
