--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,7 @@
 </section>
 <!-- end service section -->
 
+<!-- contact us section -->
 <section class="service_section layout_padding">
   <div class="container">
     <div class="heading_container">
@@ -162,6 +163,7 @@
     </div>
   </div>
 </section>
+<!-- end service section -->
   
 <!-- Contact Us Section -->
 <section class="service_section layout_padding">
