--- a/contact.html
+++ b/contact.html
@@ -146,19 +146,22 @@
 <section class="service_section layout_padding">
   <div class="container">
     <div class="heading_container">
-      <h2>Contact Us</h2>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <form action="#" method="post">
-          <div><input type="text" name="name" placeholder="Name" required /></div>
-          <div><input type="email" name="email" placeholder="Email" required /></div>
-          <div><input type="text" name="phone" placeholder="Phone Number" required /></div>
-          <div><textarea name="message" class="message-box" placeholder="Message" required></textarea></div>
-          <div class="d-flex">
-            <button type="submit">SEND</button>
+    <div class="box">
+      <div class="img-box">
+        <div class="row">
+          <div class="col-md-6">
+            <form action="#" method="post">
+              <div><input type="text" name="name" placeholder="Name" required /></div>
+              <div><input type="email" name="email" placeholder="Email" required /></div>
+              <div><input type="text" name="phone" placeholder="Phone Number" required /></div>
+              <div><textarea name="message" class="message-box" placeholder="Message" required></textarea></div>
+              <div class="d-flex">
+              <button type="submit">SEND</button>
+              </div>
+            </form>
           </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
