--- a/contact.html
+++ b/contact.html
@@ -144,24 +144,18 @@
 
 <!-- contact us section -->
 <section class="service_section layout_padding">
-  <div class="container">
-    <div class="heading_container">
-    </div>
+  <div class="service_container">
     <div class="box">
-      <div class="img-box">
-        <div class="row">
-          <div class="col-md-6">
-            <form action="#" method="post">
-              <div><input type="text" name="name" placeholder="Name" required /></div>
-              <div><input type="email" name="email" placeholder="Email" required /></div>
-              <div><input type="text" name="phone" placeholder="Phone Number" required /></div>
-              <div><textarea name="message" class="message-box" placeholder="Message" required></textarea></div>
-              <div class="d-flex">
-              <button type="submit">SEND</button>
-              </div>
-            </form>
+      <div class="detail-box">
+        <form action="#" method="post">
+          <div><input type="text" name="name" placeholder="Name" required /></div>
+          <div><input type="email" name="email" placeholder="Email" required /></div>
+          <div><input type="text" name="phone" placeholder="Phone Number" required /></div>
+          <div><textarea name="message" class="message-box" placeholder="Message" required></textarea></div>
+          <div class="d-flex">
+            <button type="submit">SEND</button>
           </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
